--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
     "tailwindcss": "^1.8.10"
   }
 }
