--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-redux": "^7.2.1",
+    "react-spring": "^8.0.27",
     "redux": "^4.0.5",
     "tailwindcss": "^1.8.10"
   }
