--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-no-ssr": "^1.1.0",
     "react-player": "^2.6.2",
     "react-redux": "^7.2.1",
     "react-spring": "^8.0.27",
