--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.20.0",
+    "firebase": "7.24.0",
     "formik": "^2.1.7",
     "next": "9.5.3",
     "react": "16.13.1",
