--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^7.2.1",
     "react-spring": "^8.0.27",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "tailwindcss": "^1.8.10"
   },
   "devDependencies": {
