--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "tailwindcss": "^1.8.10"
   },
   "devDependencies": {
-    "http-to-curl": "^1.4.3"
+    "http-to-curl": "^1.4.3",
+    "typescript": "^4.0.5"
   }
 }
