--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@types/react-redux": "^7.1.11",
     "axios": "^0.20.0",
     "firebase": "7.24.0",
     "formik": "^2.1.7",
